--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
+    <link rel="shortcut icon" href="profile.jpeg" type="image/x-icon">
     <title>Sanskriti Gupta</title>
 </head>
 <body>
     <header>
         <div class="shareButtonContainer">
             <button class="shareButton">
-                <a href="https://anubhav-ghosh1.github.io/portfolio-Sanskriti/"><img src="share.png" alt=""></a>
+                <a href="https://sanskritigupta18.github.io/Portfolio/"><img src="share.png" alt=""></a>
             </button>
         </div>
         <div class="container">
